--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.jline:jline:3.21.0'
     implementation "com.sparkjava:spark-core:2.9.4"
     implementation "org.apache.commons:commons-lang3:3.12.0"
+    implementation "ch.qos.logback:logback-classic:1.2.11"
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
